<resources>
    <string name="app_name">WeeklyWeather</string>
    <string name="nav_header_tv">城市管理</string>
    <string name="nav_header_desc_tv">点击打开城市管理获取更多城市天气</string>
    <string name="nav_home_menu">天气</string>
    <string name="nav_share_menu">分享</string>
    <string name="nav_settings_menu">设置</string>
    <string name="nav_drawer_open">open drawer</string>
    <string name="nav_drawer_close">close drawer</string>
    <string name="cities_manage_tb_title">城市管理</string>
    <string name="add_city_dialog_desc_tv">选择一份远方的牵挂</string>
    <string name="add_city_dialog_et">搜索全国城市</string>
    <string name="add_city_dialog_hot_cities">热门城市</string>
    <string name="cm_recycler_view_location_item_weather_reminder_tv">天气早晚提醒</string>
    <string name="dialog_get_location_tv">获取定位中</string>
    <string name="share_create_chooser_title">分享</string>
    <string name="optimal_air_text">优</string>
    <string name="good_air_text">良</string>
    <string name="lightly_polluted_air_text">轻度</string>
    <string name="moderately_polluted_air_text">中度</string>
    <string name="severe_polluted_air_text">重度</string>
    <string name="serious_polluted_air_text">严重</string>
    <string name="morning">今晨</string>
    <string name="today">今天</string>
    <string name="night">今夜</string>
    <string name="tomorrow">明天</string>
    <string name="day_after_tomorrow">后天</string>
    <string name="temprature">温度</string>
    <string name="wind">风力</string>
    <string name="air_quality">空气质量</string>


    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>

    <string name="life_index">生活指数</string>
    <string name="uv_index">紫外线指数</string>
    <string name="car_wash_index">洗车指数</string>
    <string name="car_tail_number_limit">尾号限行</string>
    <string name="calendar">万年历</string>
    <string name="clothing_index">穿衣指数</string>
    <string name="comfort_index">舒适度指数</string>
    <string name="travel_index">旅游指数</string>
    <string name="air_pollution_diffusion_index">空气污染扩散指数</string>
    <string name="flu_index">感冒指数</string>
    <string name="sport_index">运动指数</string>
    <string name="fishing_index">钓鱼指数</string>

    <string name="temprature_range">温度范围</string>
    <string name="weather">天气状况</string>
    <string name="sunrise_sunset">日出日落</string>

    <string name="notification_today_weather_title">今日天气提醒</string>
    <string name="notification_tom_weather_title">明日天气提醒</string>

    <string name="cm_editor_recycler_view_item_setting_bt_setted_text">已为提醒城市</string>
    <string name="cm_editor_recycler_view_item_setting_bt_unsetted_text">设为提醒城市</string>
    <string name="cm_editor_recycler_view_item_delete_bt_text">删除</string>

    <string name="days_3_weather_tv_text">3天预报</string>
    <string name="hours_24_weather_tv_text">24小时预报</string>

    <string name="short_rainfall_warning_tv_tx">短时</string>

</resources>
